--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,29 @@
 .App {
   text-align: center;
+  height: 100%;
+  background-color: #d5e8ff;
+   display: flex;
+   justify-content: center;
+  user-select: none;
+   align-items: center;
+   padding-top: 5em;
+   padding-bottom: 5em;
+
+}
+.linebreak{
+  background-color: rgb(202, 202, 202);
+  height: 1px;
+  width: 100%;
+}
+.Cart{
+  width: 60%;
+  height: 70%;
+  /* margin-top: 4em; */
+  padding: 1em 2em;
+  box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: 0px 0px 6px 2px #bdcbdd;
+  background-color: white;
 }
 
 .App-logo {
