--- a/src/Components/Itemlist.css
+++ b/src/Components/Itemlist.css
@@ -35,6 +35,15 @@
     padding: 0px 1em;
     user-select: none;
 }
+.EmptyCart{
+    color:white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 22px;
+    padding: 1rem 0rem;
+    border-radius: 1em;
+    background-color: cornflowerblue;
+    margin: 1em 0em;
+}
 .Pad{
     padding: .4em 0em;
 }
