--- a/src/Components/DataMan.css
+++ b/src/Components/DataMan.css
@@ -17,7 +17,7 @@
     flex-flow: column;
 }
 .subtotal{
-    font-size: 18px;
+    font-size: 1.1em;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
     color: rgb(78, 78, 78);
@@ -30,7 +30,7 @@
 .TotalPriceofCart{
     font-weight: 700;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 24px;
+    font-size: 1.6em;
     color: rgb(54, 54, 54);
 }
 .checkoutbutton{
