--- a/src/Components/Itemlist.css
+++ b/src/Components/Itemlist.css
@@ -10,6 +10,12 @@
 .reduceimg{
     height: 200px;
 }
+@media (max-width:966px)
+{
+    .reduceimg{
+        height: 120px;
+    }
+}
 .ContentofProduct{
     display: flex;
     flex-flow: column;
@@ -30,7 +36,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 1.2em;
     font-weight: 600;
     padding: 0px 1em;
     user-select: none;
@@ -81,7 +87,7 @@
     text-decoration: underline;
 }
 .ProductPrice{
-    font-size: 25px;
+    font-size: 1.7em;
     font-weight: 700;
 }
 .RemovingSug{
